ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service: 
            name: gke-cloud-sql-app
            port:
              number: 80
      - path: /nginx
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginxsvc
            port:
              number: 80
